@@ -19,22 +19,60 @@ package org.apache.logging.log4j.changelog.releaser;
 import java.nio.file.Path;
 import java.time.LocalDate;
 import java.util.Objects;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
+
+@SuppressFBWarnings("REDOS")
 public final class ChangelogReleaserArgs {
+
+    static final Pattern DEFAULT_VERSION_PATTERN = Pattern.compile(
+            "^(?<major>0|[1-9]\\d*)\\." +
+                    "(?<minor>0|[1-9]\\d*)\\." +
+                    "(?<patch>0|[1-9]\\d*(-[a-zA-Z][0-9a-zA-Z-]*)?)$");
 
     final Path changelogDirectory;
 
     final String releaseVersion;
+
+    final int releaseVersionMajor;
 
     final LocalDate releaseDate;
 
     public ChangelogReleaserArgs(
             final Path changelogDirectory,
             final String releaseVersion,
+            final Pattern versionPattern,
             final LocalDate releaseDate) {
         this.changelogDirectory = Objects.requireNonNull(changelogDirectory, "changelogDirectory");
-        this.releaseVersion = VersionUtils.requireSemanticVersioning(releaseVersion, "releaseVersion");
+        this.releaseVersion = Objects.requireNonNull(releaseVersion, "releaseVersion");
+        final Pattern effectiveVersionPattern = versionPattern != null ? versionPattern : DEFAULT_VERSION_PATTERN;
+        this.releaseVersionMajor = readReleaseVersionMajor(releaseVersion, effectiveVersionPattern);
         this.releaseDate = Objects.requireNonNull(releaseDate, "releaseDate");
+    }
+
+    private static int readReleaseVersionMajor(final String releaseVersion, final Pattern versionPattern) {
+
+        // Match the version string
+        final Matcher releaseVersionMatcher = versionPattern.matcher(releaseVersion);
+        if (!releaseVersionMatcher.matches()) {
+            final String message = String.format(
+                    "provided version `%s` does not match the expected pattern `%s`",
+                    releaseVersion, versionPattern);
+            throw new IllegalArgumentException(message);
+        }
+
+        // Extract the version major
+        final String releaseVersionMajorString = releaseVersionMatcher.group("major");
+        if (releaseVersionMajorString == null) {
+            final String message = String.format(
+                    "was expecting version pattern `%s` to provide a `major`-named group matching against the given version `%s`",
+                    versionPattern, releaseVersion);
+            throw new IllegalArgumentException(message);
+        }
+        return Integer.parseInt(releaseVersionMajorString);
+
     }
 
 }
